# bio-volumentations

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  100IterationsTest.txt  CHANGELOG.md  HowToChangeDocumentation.txt  LICENSE  README.md  __init__.py  bio_volumentations_wrapper.py  demo.py  devel.py  docs_conf_example.py  pyproject.toml  requirements.txt  setup.py  speed_test.py  test_keypoints.ipynb  tst_volumentations_speed.py
bio_volumentations/: biovol_typing.py  napari_tools.py  random_utils.py  typing.py
bio_volumentations/augmentations/: __init__.py  functional.py  spatial_funcional.py  transforms.py  utils.py
bio_volumentations/conversion/: functional.py  transforms.py
bio_volumentations/core/: composition.py  transforms_interface.py
bio_volumentations/tests/augmentations/: test_functional.py  test_transforms.py
bio_volumentations/tests/core/: test_composition.py
docs/: index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  volumentations_biomedicine.augmentations.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  volumentations_biomedicine.augmentations.html
docs/source/: bio_volumentations.augmentations.rst  conf.py  contributions.rst  examples.rst  index.rst  intro.rst  modules.rst  src.bio_volumentations.augmentations.rst  src.bio_volumentations.conversion.rst  src.bio_volumentations.core.rst
example/: image_transformed.tif  segmentation_mask_transformed.tif  transformation_example.py
examples/: auto_augmentation.py
examples/simple_example/: bboxes.txt  bboxes_transformed.txt  keypoints.txt  keypoints_transformed.txt  transformation_example.py
notes/: HowToUploadPackage.txt  howToDoc.txt  releasing.txt
src/: napari_tools.py
src/augmentations/: transforms.py
src/bio_volumentations/: napari_tools.py  random_utils.py
src/conversion/: transforms.py
tests/: auto_augmentation.py  runtime-100_iterations-all-1.txt  runtime-100_iterations-biovol.txt  runtime-100_iterations-gunpowder.txt  speed_test_biovol.py  speed_test_other.py  test_general.py  test_random_utils.py
tests/augmentations/: test_functional.py  test_transforms.py  test_transforms_bbox.py
tests/conversion/: test_transforms.py
tests/core/: test_composition.py  test_utils.py
volumentations_biomedicine/: __init__.py  random_utils.py  setup.py
volumentations_biomedicine/augmentations/: __init__.py  functional.py  spatial_funcional.py  transforms.py
volumentations_biomedicine/conversion/: __init__.py  functional.py  transforms.py
volumentations_biomedicine/core/: __init__.py  composition.py  transforms_interface.py
(+16 files in other folders)
